k8s/k8s-test/echo-server/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: dummy.dagandersen.com
      http: 
        paths:
          - path: /hello2 
            pathType: Prefix
            backend:
              service:
                port:
                  number: 8081
                name: echo-server-svc
          - path: /hello3
            pathType: Prefix
            backend:
              service:
                name: echo-server-svc
                port:
                  number: 8081
